--- a/Deli.csproj
+++ b/Deli.csproj
@@ -25,7 +25,9 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
         <PackageReference Include="NReco.VideoInfo" Version="1.2.0" />
         <PackageReference Include="OneSignalApi" Version="2.0.2" />
+        <PackageReference Include="QuestPDF" Version="2024.3.10" />
         <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="SkiaSharp" Version="3.0.0-preview.3.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="TextExtensions" Version="1.0.0" />
         <PackageReference Include="TweetinviAPI" Version="5.0.4" />
