--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,6 @@ jobs:
             kill -9 $PIDS
 
             cd ${{ env.PROJECT_PATH }}
+            git stash --all
             git pull
             nohup dotnet run --urls "http://${{ vars.SERVER_HOST_ADDRESS }}:3387" > /dev/null 2>&1 &
